fixec color contrast

--- a/project/styles/siteplan.css
+++ b/project/styles/siteplan.css
@@ -21,7 +21,7 @@ h1, h2, h3 {
 
 .color-2 {
     background-color: #449DD1;
-    color:white;
+    color:black;
 }
 
 .color-1, .color-2, .color-3 {
